--- a/normal.css
+++ b/normal.css
@@ -7,11 +7,20 @@ html{
 
 text-align:center;
 
+}
+
+.active{
+
+background:white;
+border:2em grey;
 
 }
 
-@media only screen and (min-width: 500px){
-
+nav a:hover { 
+display:inline;  
+color: black; 
+background-color: #fff; 
+}
 
 nav {
 
@@ -30,10 +39,23 @@ font-size:20px;
 font-weight: bold;
 text-align: center;
 width:100%;
+height:auto;
+margin-left:1em;
+margin-right:1em;
+margin-top:auto;
+margin-bottom:auto;
+padding-top:1em;
+padding-bottom:1em;
 
-margin:.5em .5em .5em .5em;
+
 
 }
+
+
+@media only screen and (min-width: 500px){
+
+
+
 
 .arrow{
 
