--- a/normal.css
+++ b/normal.css
@@ -11,8 +11,7 @@ text-align:center;
 
 .active{
 
-background:white;
-border:2em grey;
+background-color:#4CAF50;
 
 }
 
@@ -25,17 +24,16 @@ border:2em grey;
 
 @media only screen and (min-width: 500px){
 
-nav a:hover { 
-display:inline;  
-color: black; 
-background-color: #fff; 
+nav a:hover:not(.active) {
+   display:inline;  s
+    background-color: #111;
 }
 
 nav {
 
 display:flex;
 flex-direction: row;
-background-color:grey;
+background-color: #333;
 border:2em black;
 width:100%;
 margin-bottom:3em;
