--- a/normal.css
+++ b/normal.css
@@ -25,7 +25,7 @@ background-color:#4CAF50;
 @media only screen and (min-width: 500px){
 
 nav a:hover:not(.active) {
-   display:inline;  s
+   display:inline; 
     background-color: #111;
 }
 
