--- a/normal.css
+++ b/normal.css
@@ -20,14 +20,13 @@ background-color:#4CAF50;
 	padding-bottom: .5em;
 }
 
-
-
-@media only screen and (min-width: 500px){
-
 nav a:hover:not(.active) {
    display:inline; 
     background-color: #111;
 }
+
+@media only screen and (min-width: 500px){
+
 
 nav {
 
@@ -41,7 +40,7 @@ margin-bottom:3em;
 }
 nav a{
 
-color:black;
+color:white;
 text-decoration:none;
 font-size:20px;
 font-weight: bold;
