--- a/responsive.css
+++ b/responsive.css
@@ -4,14 +4,14 @@ nav {
 
 display:flex;
 flex-direction: row;
-background-color:grey;
+background-color: #333;
 border:2em black;
 width:100%;
 
 }
 nav a{
 
-color:black;
+color:white;
 text-decoration:none;
 font-size:12px;
 text-align: center;
