--- a/normal.css
+++ b/normal.css
@@ -27,6 +27,13 @@ nav a:hover:not(.active) {
     background-color: #111;
 }
 
+p{
+	color:darkslateblue;
+}
+
+h1{
+	color:greenyellow;
+}
 @media only screen and (min-width: 500px){
 
 
