--- a/normal.css
+++ b/normal.css
@@ -1,6 +1,9 @@
+@font-face {
+  font-family: "Ubuntu";
+  src: url(../ubuntu-font-family-0.83/Ubuntu-L.ttf);
 
 html{
-	font-family: 'Ubuntu', sans-serif;
+	font-family: 'Ubuntu';
 	background-color:#9DD1E3;
 }
 
