--- a/normal.css
+++ b/normal.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Ubuntu";
-  src: url(../ubuntu-font-family-0.83/Ubuntu-L.ttf);
+  src: url(./ubuntu-font-family-0.83/Ubuntu-L.ttf);
   font-weight: normal;
   font-style: normal;
 }
