--- a/normal.css
+++ b/normal.css
@@ -39,12 +39,11 @@ nav a:hover:not(.active) {
 
 p{
 	color:darkslateblue;
-	font-size:18px;
+
 }
 
 h1{
 	color:seagreen;
-	font-size:26px;
 }
 @media only screen and (min-width: 500px){
 
@@ -102,6 +101,13 @@ margin:0 auto;
 
 }
 
+p{
+	font-size:18px;
+}
+
+h1{
+	font-size:26px;
+}
 
 }
 
@@ -127,6 +133,14 @@ height: auto;
 	width:3%;
 	height:auto;
 
+}
+
+p{
+	font-size:18px;
+}
+
+h1{
+	font-size:26px;
 }
 
 
